--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial;
   font-size: 17px;
   padding: 8px;
-  background-color: #060706;
+  background-color: black;
 }
 
 h1 {
@@ -57,6 +57,22 @@ input[type=text] {
   border-radius: 3px;
 }
 
+input[type=email] {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+input[type=number] {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
 label {
   margin-bottom: 10px;
   display: block;
@@ -69,7 +85,7 @@ label {
 }
 
 .btn {
-  background-color: #4CAF50;
+  background-color: #000000;
   color: white;
   padding: 12px;
   margin: 10px 0;
@@ -82,7 +98,7 @@ label {
 }
 
 .btn:hover {
-  background-color: #45a049;
+  background-color: rgba(0, 0, 0, 0.144), 160, 73, 0.123;
 }
 
 a {
@@ -108,7 +124,7 @@ span.price {
   }
   
   .btn {
-    background-color: #060706;
+    background-color: #080808;
     color: white;
     padding: 12px;
     margin: 10px 0;
